...
                            .weight(0.1F)
                            .align(Alignment.CenterHorizontally)
                    ) {
                        FaunaButton(
                            modifier = Modifier
                                .fillMaxWidth(0.4F)
                                .semantics { testTag = "continueButton" },
                            text = stringResource(id = R.string.on_board_new_user_continue_button),
                            iconRight = R.drawable.right,
                            contentColor = MaterialTheme.colorScheme.onPrimary,
                            onClick = {
                                if (userCreateInputUIState.continueEnabled()) onContinueClick()
                            },
...
